# quant-research

./: .env.example  .gitignore  AGENTS.md  README.md  conftest.py  pyproject.toml  requirements.txt
config/: data_sources.yaml
docs/: detector_spec_v1.md  detector_spec_v1_1.md  implementation_plan_v2.md  project_brief.md  setup_geometry_contract_v2_1.md
src/quant_research/: __init__.py
src/quant_research/analysis/: __init__.py
src/quant_research/backtest/: __init__.py
src/quant_research/data/: __init__.py  retriever.py
src/quant_research/setups/: __init__.py  adapter.py  boundary.py  contract.py  detector.py  geometry_access.py  materializer.py  path_recorder.py  primitives.py  validators.py
src/quant_research/strategies/: __init__.py  base.py
tests/: __init__.py  test_adapter.py  test_boundary.py  test_causality.py  test_detector.py  test_golden.py  test_materializer.py  test_paths.py  test_repaint.py  test_retriever.py  test_termination.py  test_validators.py
tests/fixtures/: builders.py  pipeline.py  synthetic.py
